# BackPackTest

./: .gitignore  README.md  pyproject.toml
docs/architecture/: dependency-map.md  overview.md  phase-2-refactor.md  repository-structure.md  threat-model.md
docs/examples/: usage.md
docs/modules/: api-guard.md  automation-engine.md  campaign-planner.md  defensive-upgrades.md  dependency-lens.md  emulation-lab.md  engagement-flow.md  evidence-vault.md  operator-workbench.md  phase-3-4-critique.md  preflight-guard.md  red-team-first-class.md  report-smith.md  secret-scanner.md  toolkit-planner.md  upgrade-engine.md  ux-upgrades.md
docs/policy/: roadmap.md  safe-use.md
docs/workflows/: engagement-lifecycle.md
examples/advisories/: cves.json
examples/authorization/: project.yaml
examples/code/: requirements.txt  sample.py  secrets.env
examples/configs/: docker-compose.yml
examples/scenarios/: scenario.yaml
examples/scope/: openapi.yaml  targets.yaml
examples/workflows/: automation.yaml
fastapi/: __init__.py
jinja2/: __init__.py
pydantic/: __init__.py
tests/golden/: test_report_golden.py
tests/integration/: test_project_flow.py
tests/unit/: test_api_guard.py  test_authorization.py  test_automation_engine.py  test_campaign_planner.py  test_code_guard.py  test_config_audit.py  test_cve_coverage.py  test_dashboard_html.py  test_dependency_lens.py  test_emulation_lab.py  test_engagement_flow.py  test_evidence_vault.py  test_findings_dashboard.py  test_preflight_guard.py  test_report_smith.py  test_risk_prioritizer.py  test_secret_scanner.py  test_surface_mapper.py  test_toolkit_planner.py  test_upgrade_engine.py
typer/: __init__.py
yaml/: __init__.py
